fixed the menu top image causing horizontal scroll. change title tab name

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -4,10 +4,20 @@
 }
 
 .sticky-container{
-    position: sticky;
     background-color: #000;
     color: #fff;
     bottom: 0;
+    padding: 8px;
+    text-align: center;
+    font-size: 22px;
+
+}
+.footer-text .icons{
+    padding: 8px;
+    display: flex;
+    gap:4px;
+}
+.footer-text{
     padding: 8px;
 }
 
@@ -46,7 +56,8 @@
 .section-header{
     color: #000;
     padding: 15px;
-    font-size: 40px;
+    /*font-size: 54px;*/
+    font-size: 11vw;
     text-align: center;
 }
 
